2003-05-23  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>

	* configure.in: Added "cy" (Welsh) to ALL_LINGUAS

2003-05-19  Christian Neumair  <chris@gnome-de.org>

	* bonobo/bonobo-selector.c: Fixed a minor typo.

2003-05-19  Kenneth Rohde Christiansen  <kenneth@gnu.org>

	* configure.in: Added Limburgish to ALL_LINGUAS

2003-05-15 Bob Gibbs <gibbsrc@npt.nuwc.navy.mil>
        * bonobo-canvas-component.h

        (bonobo_canvas_component_factory_new): new.  Convenience to replace old
        embeddable way of creating the canvas component.

        * bonobo-canvas-component.c

        (impl_Bonobo_Canvas_Component_bounds): Mapped state for crossing event.

        (impl_Bonobo_Canvas_Component_contains): Fixed to return proper
        inside/outside value.  Was always returning true.

        (impl_Bonobo_Canvas_Component_update): Call rih group update here vice
        inside rih_update. Solves for case where a request_update is made while
        the component is waiting for a response.

        (handle_event): new. Passes the remote item's event back into the local
        pseudo-canvas so that canvas items can see events the normal way as if
        they were not using bonobo.

        (rih_update): Moved rih group update into
        impl_Bonobo_Canvas_Component_update.  This solves for case where a
        request_update is made while the component is waiting for a response to
        its last Bonobo_Canvas_ComponentProxy_requestUpdate.

        (impl_Bonobo_Canvas_Component_event): Added do_update_flag check to
        prevent signal from being emitted when any pseudo-canvas is in its
        do_update. Fixed alloc/de-alloc of gdk_event structure.

        (handle_event_later): new. Emits event signal sometime after do_update
        finishes.

        (free_event): removed. Replaced by gdk_event_free.

        (impl_Bonobo_Canvas_Component_setBounds): Added do_update_flag check to
        prevent signal from being emitted when any pseudo-canvas is in its